<resources>
  <string name="app_name">Android-Practice-2018</string>

  <!-- 개발자 튜토리얼 -->
  <string name="title_dev_tutorial">개발자 튜토리얼</string>
  <string name="dev_tutorial_edit_message">Enter a Message</string>
  <string name="dev_tutorial_button_send">SEND</string>

  <!-- 데이터 보존 테스트 -->
  <string name="title_data_conserve">데이터 보존 튜토리얼</string>
  <string name="data_conserve_button_change_data">CHANGE DATA</string>

  <!-- 프래그먼트 교체 연습 -->
  <string name="title_fragment_changed">프래그먼트 교체 튜토리얼</string>
  <string name="fragment_changed_button_change_fragment">CHANGE FRAGMENT</string>
  <string name="fragment_changed_button_stack_fragment">STACK FRAGMENT</string>

  <!-- 개요화면 연습 -->
  <string name="title_document_centric">개요화면 튜토리얼</string>
  <string name="document_centric_button_new_document">NEW DOCUMENT</string>
  <string name="document_centric_button_new_document_with_multi_task">NEW DOCUMENT with
        MultiTask
    </string>
  <string name="document_centric_button_remove_document">REMOVE DOCUMENT</string>
  <string name="document_centric_new_document_simple_text">New Document</string>
  <string name="document_centric_already_created">Already Created</string>

  <!-- 커스텀뷰 연습 -->
  <string name="title_custom_view">커스텀 뷰 튜토리얼</string>
  <string name="custom_view_logo_description">LOGO</string>
  <string name="custom_view_button_label_google_login">Google 로 로그인</string>

  <!-- ConstraintLayout 연습 -->
  <string name="title_constraint_layout">ConstraintLayout 튜토리얼</string>

  <string name="constraint_layout_title_side">Side 제약 튜토리얼</string>
  <string name="hint_constraint_layout_hello_world_1">Constraint HELLO WORLD1</string>
  <string name="hint_constraint_layout_hello_world_2">Constraint HELLO WORLD2</string>

  <string name="constraint_layout_title_center">Center 제약 튜토리얼</string>
  <string name="constraint_layout_btn_center_bias_70_percent">CENTER BIAS 70% BUTTON</string>

  <string name="constraint_layout_visibility_behavior">Visibility Behavior 튜토리얼</string>
  <string name="constraint_layout_btn_a">A</string>
  <string name="constraint_layout_btn_b_with_a">B (A is visibility)</string>
  <string name="constraint_layout_btn_b_without_a">B (A is gone~~)</string>

  <string name="constraint_layout_dimensions">Dimensions 튜토리얼</string>
  <string name="constraint_layout_fixed">Fixed</string>
  <string name="constraint_layout_wrap_content_padding_30">wrap_content - padding 30</string>
  <string name="constraint_layout_match_constraint">0dp - match constraint</string>
  <string name="constraint_layout_match_constraint_left_20">0dp - match constraint - margin left
        20
    </string>

  <string name="constraint_layout_ratio">Ratio 튜토리얼</string>
  <string name="constraint_ratio_simple">Simple Ratio 1:1</string>
  <string name="constraint_ratio_h_2_1">All match_constraint and Ratio h,2:1</string>
  <string name="constraint_ratio_w_2_1">All match_constraint and Ratio w,2:1</string>

  <string name="constraint_layout_guideLine">Guide LINE 튜토리얼</string>
  <string name="constraint_guide_line">GUIDE LINE</string>

  <string name="constraint_layout_barrier">Barrier 튜토리얼</string>
  <string name="constraint_barrier_tv_label_1">ABC</string>
  <string name="constraint_barrier_edit_first">글씨 입력</string>
  <string name="constraint_barrier_message">안녕하세요.\n방어막 테스트입니다.\n음.. 무슨 말을 쓸까\n에디트 텍스트의 글을
        수정해보시겠어요?
    </string>

  <string name="constraint_layout_chain_style_spread">Chain Style - Spread</string>
  <string name="constraint_layout_chain_style_spread_inside">Chain Style - Spread inside</string>
  <string name="constraint_layout_chain_style_weighted">Chain Style - weighted</string>
  <string name="constraint_layout_chain_style_packed">Chain Style - packed</string>
  <string name="constraint_chain_button_1">View 1</string>
  <string name="constraint_chain_button_2">View 2</string>
  <string name="constraint_chain_button_3">View 3</string>

  <!-- ConstraintSet 연습 -->
  <string name="title_constraint_set_animation">ConstraintSet 애니메이션</string>

  <!-- App Bar 연습 -->
  <string name="title_app_bar_tutorial">Appbar - Menu 연습</string>
  <string name="title_app_bar_custom_bar">Toolbar 연습</string>
  <string name="app_bar_favorite">즐겨찾기</string>
  <string name="app_bar_menu_basic">일반메뉴</string>
  <string name="app_bar_menu_select_1">선택메뉴 (1)</string>
  <string name="app_bar_menu_select_2">선택메뉴 (2)</string>
  <string name="app_bar_menu_sub">서브메뉴</string>
  <string name="message_app_bar_favorite">즐겨찾기가 눌렸습니다.</string>
  <string name="message_app_bar_setting">일반메뉴가 눌렸습니다.</string>

  <!-- View Stub 연습 -->
  <string name="title_view_stub_tutorial">View Stub 연습</string>
  <string name="view_stub_btn_message">Hello, View Stub</string>

  <!-- 쉐도우 - 클리핑 연습 -->
  <string name="title_shadow_and_clipping_tutorial">쉐도우 - 클리핑 연습</string>
  <string name="shadow_and_clipping_btn_label">Button</string>
  <string name="shadow_label">쉐도우 예제</string>
  <string name="clipping_label">클리핑 예제</string>
  <string name="clipping_message_able_clipping">클리핑 실행</string>
  <string name="clipping_message_disable_clipping">클리핑 중지</string>

  <!-- 드래그 & 드롭 연습 -->
  <string name="title_drag_and_drop_tutorial">드래그 앤 드롭 연습</string>
  <string name="drag_and_drop_text">SAMPLE TEXT</string>

  <!-- 안드로이드 아키텍처 컴포넌트 연습 -->
  <string name="title_aac_tutorial">안드로이드 아키텍처 컴포넌트 연습</string>
  <string name="hint_aac_name">이름</string>
  <string name="hint_aac_age">나이</string>
  <string name="hint_aac_gender">성별</string>
  <string name="label_aac_male">남자</string>
  <string name="label_aac_female">여자</string>
  <string formatted="false" name="format_aac_age">%d세</string>
  <string name="label_aac_update_profile">유저정보 업데이트</string>
  <string name="label_aac_update_refresh">유저정보 리프레쉬</string>

  <!-- 옵저버블 데이터 바인딩 연습-->
  <string name="title_observable_data_binding_tutorial">옵저버블 데이터 바인딩 연습</string>
  <string name="title_action_live_event_tutorial">Live Event 연습</string>

  <!-- Long Text 에 대한 실험 -->
  <string name="title_long_text_ellipsize_test">Long Text Ellipsize 에 대한 실험</string>
  <string name="label_long_text_ellipsize_fixed_label">Fixed Label Space</string>
  <string name="hint_long_text_ellipsize_fixed_label">Please input long size name text</string>

  <!-- Event Bus 관련 화면 정의 -->
  <string name="title_event_bus_text">Event Bus Tutorial 화면</string>
  <string name="label_simple_produce">Simple Produce</string>
  <string name="appwidget_text">EXAMPLE</string>
  <string name="add_widget">Add widget</string>

  <!-- Dagger Test 화면 정의 -->
  <string name="title_dagger_test">Dagger 테스트 화면 정의</string>
  <string name="label_dagger_fragment_test_none">static 으로 정의된 프래그먼트입니다.</string>
  <string name="label_dagger_fragment_test">Dagger 로 주입된 프리젠터를 이용했습니다.</string>

  <!-- Single Activity - Multiple Fragments 패턴 테스트 정의 -->
  <string name="title_single_activity_multiple_fragments_test">Single Activity - Multiple Fragments 회고</string>
  <string name="menu_top_user_page">USER</string>
  <string name="menu_top_note_page">NOTE</string>
  <string name="menu_top_share_page">SHARE</string>
  <string name="label_top_user_page">USER PAGE</string>
  <string name="label_top_user_name">이름 : </string>
  <string name="label_top_user_age">나이 : </string>
  <string name="label_top_user_gender">성별 : </string>
  <string name="label_top_user_friends">Friends</string>
  <string name="label_go_to_user_end">유저 엔드로 이동</string>
  <string name="label_share_page">Navigation 증명을 위한 페이지</string>

  <!-- shared Element 관련 예제 정의 -->
  <string name="title_shared_element">Shared Element Activity</string>
  <string name="label_shared_element_current">Current 화면입니다.</string>
  <string name="label_shared_element_target">Target 화면입니다.</string>
  <string name="title_shared_element_fragment">Shared Element Fragment</string>
  <string name="label_shared_element_fragment_next">다음 페이지</string>
  <string name="label_shared_element_fragment_description">수지에 대한 설명을 해야 합니다.\n해당 예제가 다행히 잘 작동해서 좋습니다.\n감사합니다.</string>

  <string name="simple_transition_name">simple_transition_name</string>

  <!-- Widget 관련 정의 -->
  <string name="title_widget_sync">위젯 동기화 테스트 화면</string>
  <string name="label_music_name">N\'s Lab Music</string>
  <string name="label_play_song">재생 중인 노래</string>
  <string name="label_next_play">다음 곡 이동</string>
  <string name="label_error_song_title">알 수 없는 트랙</string>
  <string name="label_error_artist">Various artist</string>
  <string formatted="false" name="msg_play">%s 음악을 재생합니다.</string>
  <string name="msg_play_next">다음 곡을 재생합니다.</string>
  <string name="msg_play_prev">이전 곡을 재생합니다.</string>
  <string name="msg_play_pause">음악을 중지합니다.</string>
  <string formatted="false" name="msg_like">%s를 즐겨찾기 하였습니다.</string>
  <string formatted="false" name="msg_unlike">%s를 즐겨찾기에서 취소하였습니다.</string>

  <!-- anko -->
  <string name="title_anko_layout">anko 로 레이아웃 구성하기</string>
  <string name="hint_anko_search">검색어를 입력하세요.</string>
  <string name="label_anko_search">검색</string>
</resources>
