<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="@string/constraint_layout_btn_a"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonB"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            app:layout_goneMarginLeft="24dp"
            android:text="@string/constraint_layout_btn_b_with_a"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonA"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonA_2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:text="@string/constraint_layout_btn_a"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonB_2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonB_2"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/colorAccent"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/constraint_layout_btn_b_without_a"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonA_2"
            app:layout_goneMarginLeft="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>