<?xml version="1.0" encoding="utf-8"?>

<layout>

  <data>
    <variable
      name="user"
      type="nlab.practice.common.model.User"/>
  </data>

  <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".issue30.page.UserEndFragment">

    <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/ivProfile"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:scaleType="centerCrop"
          app:layout_constraintDimensionRatio="1:1"
          tools:src="@drawable/common_img_user_circle"/>

        <LinearLayout
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="10dp"
          android:layout_marginLeft="10dp"
          android:orientation="vertical"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/ivProfile">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_top_user_name"
              android:textSize="16sp"/>
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:text="@{user.name}"
              android:textSize="16sp"
              tools:text="이름 데이터"/>
          </LinearLayout>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_top_user_age"
              android:textSize="16sp"/>
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:text="@{user.toAgeLabel}"
              android:textSize="16sp"
              tools:text="나이 데이터"/>
          </LinearLayout>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_top_user_gender"
              android:textSize="16sp"/>
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:text="@{user.toGenderLabel}"
              android:textSize="16sp"
              tools:text="성별 데이터"/>
          </LinearLayout>
        </LinearLayout>
      </android.support.constraint.ConstraintLayout>
    </ScrollView>

  </FrameLayout>
</layout>